--- a/style/style.css
+++ b/style/style.css
@@ -124,14 +124,14 @@ h1 {
 .logo {
     color: #ffffff;
     padding-top: 8px;
-    padding-left: 75px;
     font-size: 25px;
     line-height: 18px;
+    margin:0;
 }
 
 .logo a {
     color: #ffffff;
-    padding-left: 75px;
+    padding-left: 65px;
     font-size: 25px;
     line-height: 18px;
 }
@@ -139,7 +139,7 @@ h1 {
 .sublogo {
     color: #409FFF;
     margin-top: 10px;
-    padding-left: 75px;
+    padding-left: 65px;
     font-size: 11px;
     font-weight: 100;
     text-align: left;
@@ -205,37 +205,54 @@ h1 {
     h1 {
         font-size: 30px;
     }
-        .about_box {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column-reverse;
-        }
+    .logo {
+        padding:5px;
+        margin-top: 5px;
+    }
     
-        .about_text {
-            width: 80%;
-            max-width: 100%;
-        }
-        .about_img img{
-            height: 200px;
-            width: 200px;
-        }
-        .img-round {
-            margin-left: 0;
-        }
+    .logo a {
+        padding-left: 5px;
+        
+    }
     
-        .about_img {
-            width: auto;
-            padding: -20px;
-            font-size: 0.9em;
-            margin-bottom: 40px;
-        }
-        .about_text{
-            font-size: 1rem;
-            padding: 0;
-            margin: 0;
-        }
-        #aboutme{
-            margin: 0 auto;
-        }
+    .about_box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column-reverse;
+    }
+    
+    .about_text {
+        width: 80%;
+        max-width: 100%;
+    }
+    .about_img img{
+        height: 200px;
+        width: 200px;
+    }
+    .img-round {
+        margin-left: 0;
+    }
+    
+    .about_img {
+        width: auto;
+        padding: -20px;
+        font-size: 0.9em;
+        margin-bottom: 40px;
+    }
+    .about_text{
+        font-size: 1rem;
+        padding: 0;
+        margin: 0;
+    }
+    #aboutme{
+        margin: 0 auto;
+    }
+    .sublogo {
+        color: #409FFF;
+        margin-top: 10px;
+        padding-left: 15px;
+        
+        
+    }
 }
